Correct image over-spillage in container

--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ a:hover {
 }
 
 img {
-    width: auto;
+    max-width: 100%;
+    max-height: 100%;
     padding: 10px;
     border: 1px solid;
 }
